# ibm-cloud-vm-controller

./: .env-sample  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: architecture.md
src/: .env-sample  config.yaml  main.py  mcp_server.py
src/core/: __init__.py  config.py  log.py
src/dtos/: __init__.py  vsi.py  vsi_template.py
src/services/: __init__.py  vsi_client.py
src/services/commands/: __init__.py  base.py  create.py  delete.py  ibm_vpc_client.py  list.py  start.py  stop.py
tests/: test_vsi_controller.py
